# APRCS

./: .compile.cpp  CMakeLists.txt  LICENSE  README.md
include/: auto-ptr.hpp  ref-counting.hpp  signaling.hpp
samples/: CMakeLists.txt
samples/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  arguments.hpp  rand.hpp  test-auto-ptr.cpp  test-ref-counting.cpp  test-signaling.cpp
